--- a/src/modules/calendar/components/CalBody/calContent/dayLayout/dayLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/dayLayout/dayLayout.scss
@@ -17,17 +17,6 @@ $minGridDifferWidth: 80px;
         display: flex;
         padding-right: $columBodyMainPaddingRight;
         padding-top: 12px;
-        // & .placeholder {
-        //     flex: 0 0 $columnBodyOffset;
-        //     display: flex;
-        //     flex-direction: column;
-        //     justify-content: flex-end;
-        //     align-items: center;
-        //     padding-bottom: 2px;
-        //     & .gmt {
-        //         padding-bottom: 20px;
-        //     }
-        // }
     }
 
     &__main {
@@ -66,7 +55,7 @@ $minGridDifferWidth: 80px;
             100vw - #{$calBodyShelfWidth} - #{$calBodyLinkSideBarWidth} - #{$columnBodyOffset} -
                 #{$columBodyMainPaddingRight}
         );
-        overflow-x: auto;
+        overflow-x: visible;
         @include customizeScrollbar();
     }
 
