site expo design

--- a/src/modules/siteExpo/assets/style/theme.scss
+++ b/src/modules/siteExpo/assets/style/theme.scss
@@ -1,2 +1,8 @@
-$header-height: 60px;
-$carousel-width: 600px;
+$header-height: 70px;
+$carousel-height: 600px;
+$aboutus-height: 360px;
+$contact-height: 120px;
+
+$grey-background: #f6f6f6;
+// $background-footer: #3F3232;
+$background-footer: #282726;
