--- a/src/modules/siteExpo/assets/style/app.scss
+++ b/src/modules/siteExpo/assets/style/app.scss
@@ -1,13 +1,16 @@
-@import '../style/theme.scss';
+@import "../style/theme.scss";
+
+$carousel-text-bottom: 30%;
+$carousel-text-left: 40%;
 
 .site-expo-container {
   position: relative;
-  width: 100vw;
+  width: 100%;
 
   .accueil {
     position: relative;
     width: 100%;
-    height: $carousel-width;
+    height: $carousel-height;
 
     .carousel-bg {
       position: absolute;
@@ -15,8 +18,143 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background-image: url('../image/carousel1.png');
+      background-image: url("../image/carousel1.png");
       background-position: center;
+    }
+
+    .carousel-overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      opacity: 0.5;
+      background-color: #1c1d21;
+    }
+
+    .carousel-content {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      .text-wrapper {
+        position: absolute;
+        bottom: $carousel-text-bottom;
+        left: $carousel-text-left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+
+        .carousel-title-main {
+          font-size: 50px;
+          font-weight: 100;
+          margin-bottom: 20px;
+        }
+
+        .carousel-title-sub {
+          font-size: 20px;
+          font-weight: 100;
+          margin-bottom: 40px;
+        }
+
+        .carousel-btn {
+          padding: 0 30px;
+          border: 1px solid #fff;
+          line-height: 40px;
+        }
+      }
+    }
+  }
+
+  .services {
+    display: flex;
+    justify-content: center;
+    background: #fff;
+  }
+
+  .aboutus-container {
+    width: 100%;
+    height: $aboutus-height;
+  }
+
+  .contacts {
+    background: $background-footer;
+    height: $contact-height;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: #dcd9c6;
+
+    .text-wrapper {
+      width: 80%;
+      min-width: 400px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      .contact-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+      }
+
+      .contact-icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 20px;
+          margin: 0 10px;
+        }
+      }
+
+      .contact-law {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        font-weight: 500;
+
+        & > * {
+          line-height: 20px;
+          margin-left: 5px;
+        }
+
+        img {
+          height: 20px;
+        }
+      }
+    }
+  }
+
+  .test {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    .bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-image: url("../image/carousel2.png");
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: #192e5b;
+      opacity: .94;
     }
   }
 }
