--- a/src/modules/siteExpo/assets/style/theme.scss
+++ b/src/modules/siteExpo/assets/style/theme.scss
@@ -1,8 +1,9 @@
 $header-height: 70px;
-$carousel-height: 600px;
+$carousel-height: 700px;
 $aboutus-height: 360px;
 $contact-height: 120px;
 
 $grey-background: #f6f6f6;
 // $background-footer: #3F3232;
 $background-footer: #282726;
+$background-expertise: #393f4d;
