--- a/src/modules/siteExpo/assets/style/app.scss
+++ b/src/modules/siteExpo/assets/style/app.scss
@@ -3,6 +3,7 @@
 $carousel-text-bottom: 30%;
 $carousel-text-left: 40%;
 
+
 .site-expo-container {
   position: relative;
   width: 100%;
@@ -11,6 +12,12 @@ $carousel-text-left: 40%;
     position: relative;
     width: 100%;
     height: $carousel-height;
+    overflow: hidden;
+    &:hover {
+      .carousel-bg {
+        transform: scale(1.2);
+      }
+    }
 
     .carousel-bg {
       position: absolute;
@@ -20,6 +27,10 @@ $carousel-text-left: 40%;
       right: 0;
       background-image: url("../image/carousel1.png");
       background-position: center;
+      background-repeat: no-repeat;
+      // box-shadow: inset 0px 0px 30px 30px rgba(0,0,0,0.9);
+      box-shadow: inset 5px 54px 40px 3px rgba(61,58,61,0.98);
+      transition: all .2s ease-in;
     }
 
     .carousel-overlay {
@@ -30,6 +41,7 @@ $carousel-text-left: 40%;
       right: 0;
       opacity: 0.5;
       background-color: #1c1d21;
+      // box-shadow: inset 0px 0px 30px 30px rgba(0,0,0,0.9);
     }
 
     .carousel-content {
@@ -135,7 +147,7 @@ $carousel-text-left: 40%;
     }
   }
 
-  .test {
+  .expertises {
     position: relative;
     width: 100%;
     height: 500px;
@@ -153,8 +165,58 @@ $carousel-text-left: 40%;
       left: 0;
       right: 0;
       bottom: 0;
-      background: #192e5b;
-      opacity: .94;
+      // background: #192e5b;
+      background: #393f4d;
+      opacity: .95;
+    }
+  }
+
+  .about-us2 {
+    position: relative;
+    width: 100%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+
+    .about-us2-content {
+      position: absolute;
+      top: - 40px;
+      width: 600px;
+      height: 300px;
+      background: #fff;
+      border-top-left-radius: 6px;
+      border-top-right-radius: 6px;
+      box-shadow: 3px 12px 21px 4px rgba(154,154,154,0.41);
+      display: flex;
+
+      .main {
+        position: relative;
+        flex-basis: 50%;
+        // flex: 0;
+        .title {
+          font-size: 28px;
+          font-weight: 600;
+          margin: 20px 0;
+          font-family: Snell Roundhand;
+        }
+
+        .description {
+          width: 100%;
+          padding: 18px;
+          font-weight: 300;
+          font-size: 15px;
+          line-height: 22px;
+        }
+      }
+
+      .image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          width: 300px;
+        }
+      }
     }
   }
 }
