--- a/src/modules/siteExpo/assets/style/theme.scss
+++ b/src/modules/siteExpo/assets/style/theme.scss
@@ -2,6 +2,7 @@ $header-height: 70px;
 $carousel-height: 700px;
 $aboutus-height: 360px;
 $contact-height: 120px;
+$expertise-min-height: 500px;
 
 $grey-background: #f6f6f6;
 // $background-footer: #3F3232;
