--- a/src/modules/siteExpo/assets/style/app.scss
+++ b/src/modules/siteExpo/assets/style/app.scss
@@ -147,51 +147,36 @@ $carousel-text-left: 40%;
     }
   }
 
-  .expertises {
-    position: relative;
-    width: 100%;
-    height: 500px;
-    .bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-image: url("../image/carousel2.png");
-    }
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      // background: #192e5b;
-      background: #393f4d;
-      opacity: .95;
-    }
-  }
-
   .about-us2 {
     position: relative;
     width: 100%;
-    height: 280px;
+    // height: 280px;
+    min-height: 280px;
     display: flex;
     justify-content: center;
 
     .about-us2-content {
-      position: absolute;
+      position: relative;
       top: - 40px;
-      width: 600px;
-      height: 300px;
+      // width: 600px;
+      max-width: 600px;
+      // min-height: 300px;
       background: #fff;
       border-top-left-radius: 6px;
       border-top-right-radius: 6px;
       box-shadow: 3px 12px 21px 4px rgba(154,154,154,0.41);
       display: flex;
+      flex-wrap: wrap;
+
+      @media (min-width: 320px) and (max-width: 767px) {
+        max-width: 300px;
+      }
 
       .main {
         position: relative;
-        flex-basis: 50%;
+        // flex-basis: 300px;
+        height: 300px;
+        flex: 0 0 300px;
         // flex: 0;
         .title {
           font-size: 28px;
@@ -203,9 +188,9 @@ $carousel-text-left: 40%;
         .description {
           width: 100%;
           padding: 18px;
-          font-weight: 300;
+          font-weight: 200;
           font-size: 15px;
-          line-height: 22px;
+          line-height: 26px;
         }
       }
 
@@ -213,8 +198,12 @@ $carousel-text-left: 40%;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex: 0 0 300px;
+        height: 300px;
+
         img {
-          width: 300px;
+          width: 100%;
+
         }
       }
     }
