site expo design

--- a/src/modules/siteExpo/assets/style/animation.scss
+++ b/src/modules/siteExpo/assets/style/animation.scss
@@ -1,5 +1,53 @@
 @keyframes progress {
-    0% {
-      stroke-dasharray: 0 100;
-    }
+  0% {
+    stroke-dasharray: 0 100;
   }
+}
+
+@keyframes slideInBelow {
+  0% {
+    transform: translateY(60px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInTop {
+  0% {
+    transform: translateY(-70px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
