--- a/src/modules/siteExpo/component/expertises/expertiseCircle/expertiseCircle.scss
+++ b/src/modules/siteExpo/component/expertises/expertiseCircle/expertiseCircle.scss
@@ -1,12 +1,10 @@
-
-
 .expertise-circle {
-    position: relative;
-    margin: 15px 30px;
+  position: relative;
+  margin: 15px 60px;
 
   .circular-chart {
     display: block;
-    width: 160px;
+    width: 200px;
     margin-bottom: 10px;
   }
 
@@ -21,7 +19,10 @@
     fill: none;
     stroke-width: 2.8;
     stroke-linecap: round;
-    animation: progress 1s ease-out forwards;
+  }
+
+  .onEnter {
+    animation: progress 1.4s ease-out forwards;
   }
 
   .percentage {
@@ -31,11 +32,11 @@
     font-weight: 100;
     text-anchor: middle;
   }
-  
+
   .expertise-title {
-      font-size: 16px;
-      font-weight: 300;
-      color: #fff;
-      font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #fff;
+    font-family: sans-serif;
   }
 }
