--- a/src/modules/siteExpo/component/serviceList/serviceList.scss
+++ b/src/modules/siteExpo/component/serviceList/serviceList.scss
@@ -15,6 +15,7 @@ $expo-services-width: 80%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    opacity: 0;
 
     .main-title {
       font-size: 40px;
@@ -38,5 +39,15 @@ $expo-services-width: 80%;
     flex-wrap: wrap;
     justify-content: space-around;
     box-shadow: 3px 12px 21px 4px rgba(154,154,154,0.41);
+    opacity: 0;
+  }
+
+  .slideIn-left {
+    animation: slideInLeft .8s ease-out forwards;
+  }
+
+  
+  .slideIn-right {
+    animation: slideInRight .8s ease-out forwards;
   }
 }
