site expo finalization

--- a/src/modules/siteExpo/assets/style/theme.scss
+++ b/src/modules/siteExpo/assets/style/theme.scss
@@ -1,10 +1,11 @@
-$header-height: 70px;
+$header-height: 60px;
 $carousel-height: 700px;
 $aboutus-height: 360px;
 $contact-height: 120px;
 $expertise-min-height: 500px;
+$footer-height: 300px;
 
 $grey-background: #f6f6f6;
 // $background-footer: #3F3232;
-$background-footer: #282726;
+$background-footer: #343148ff;
 $background-expertise: #393f4d;
