--- a/src/modules/siteExpo/assets/style/animation.scss
+++ b/src/modules/siteExpo/assets/style/animation.scss
@@ -51,3 +51,36 @@
     opacity: 1;
   }
 }
+
+// @keyframes rotateOut {
+//   0% {
+//     transform: none;
+//     // opacity: 1;
+//   }
+
+//   50% {
+//     transform: rotateY(90deg);
+//     // opacity: .5;
+//   } 
+
+//   100% {
+//     transform: rotateY(180deg);
+//     // opacity: 0;
+//   }
+// }
+
+@keyframes rotateOut{
+  0%{
+    opacity: 1;
+    transform: rotateY(90deg);
+  }
+  50%{
+    opacity: 0.5;
+    transform: rotateY(0deg);
+  }
+  100%{
+    display: none;
+    opacity: 0;
+    transform: rotateY(90deg);
+  }
+}
