--- a/src/modules/siteExpo/component/serviceList/serviceList.scss
+++ b/src/modules/siteExpo/component/serviceList/serviceList.scss
@@ -1,53 +1,53 @@
 $expo-services-width: 80%;
 
 .expo-services {
-  position: relative;
-  margin-top: 50px;
-  width: $expo-services-width;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-
-  .service-title {
     position: relative;
-    width: 100%;
+    margin-top: 80px;
+    width: $expo-services-width;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    opacity: 0;
+    align-items: center;
 
-    .main-title {
-      font-size: 40px;
-      font-weight: 300;
-      margin-bottom: 10px;
+    .service-title {
+        position: relative;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        opacity: 0;
+
+        .main-title {
+            font-size: 40px;
+            font-weight: 300;
+            margin-bottom: 10px;
+        }
+
+        .sub-title {
+            text-align: left;
+            max-width: 700px;
+            font-size: 13px;
+            color: #5f6368;
+            white-space: normal;
+        }
     }
 
-    .sub-title {
-      font-size: 13px;
-      color: #5f6368;
-      white-space: normal;
+    .service-list {
+        position: relative;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        box-shadow: 3px 12px 21px 4px rgba(154, 154, 154, 0.41);
+        opacity: 0;
     }
-  }
 
-  .service-list {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    box-shadow: 3px 12px 21px 4px rgba(154,154,154,0.41);
-    opacity: 0;
-  }
+    .slideIn-left {
+        animation: slideInLeft 0.8s ease-out forwards;
+    }
 
-  .slideIn-left {
-    animation: slideInLeft .8s ease-out forwards;
-  }
-
-  
-  .slideIn-right {
-    animation: slideInRight .8s ease-out forwards;
-  }
+    .slideIn-right {
+        animation: slideInRight 0.8s ease-out forwards;
+    }
 }
