--- a/src/modules/siteExpo/component/contacts/contacts.scss
+++ b/src/modules/siteExpo/component/contacts/contacts.scss
@@ -134,9 +134,12 @@
   border-radius: 4px;
   padding: 4px;
   opacity: 1;
-  span img {
-    // position: relative;
-    width: 130px;
-    cursor: pointer;
+  span  {
+    display: flex;
+    img {
+      width: 160px;
+      cursor: pointer;
+    }
+
   }
 }
