--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -20,11 +20,14 @@ $weekLineBgColor: #f1f3f4;
 
 /* shape */
 $btnBorderRadius: 4px;
-$focusShadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-$calEventDefinerShadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
-  0 11px 15px -7px rgba(0, 0, 0, 0.2);
-$calDayEvtPresenterShadow: 0 1px 3px 0 rgba(60, 64, 67, 0.302), 0 4px 8px 3px rgba(60, 64, 67, 0.149);
-
+$focusShadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+$calEventDefinerShadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+$calDayEvtPresenterShadow: 0 1px 3px 0 rgba(60, 64, 67, 0.302),
+    0 4px 8px 3px rgba(60, 64, 67, 0.149);
+$calEvtCtxMenuShadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
 /* layout */
 $headerContainerHeight: 64px; // header width;
 $logoFlexBasis: 200px;
@@ -55,127 +58,125 @@ $calEventDefinerOptionMainLeftPadding: 10px;
 $caldaySimpleevtItemHeight: 22px;
 
 .btn {
-  border-radius: $btnBorderRadius;
-  border: 1px solid $appFrameBorderColor;
-  font-size: $fontSizeBasic;
-  // font-weight: 500;
-  letter-spacing: 0.25px;
-  outline: none;
-  cursor: pointer;
-  &.is-inform {
-    line-height: 36px;
-    padding: 0 24px;
-    transition: background 0.2s ease-in;
-    background: #1a73e8;
-    color: #fff;
-    &:hover {
-      background: lighten(#1a73e8, 10%);
+    border-radius: $btnBorderRadius;
+    border: 1px solid $appFrameBorderColor;
+    font-size: $fontSizeBasic;
+    // font-weight: 500;
+    letter-spacing: 0.25px;
+    outline: none;
+    cursor: pointer;
+    &.is-inform {
+        line-height: 36px;
+        padding: 0 24px;
+        transition: background 0.2s ease-in;
+        background: #1a73e8;
+        color: #fff;
+        &:hover {
+            background: lighten(#1a73e8, 10%);
+        }
     }
-  }
-  &.is-silent {
-    border: none;
-    &:hover {
-      background: $hoverBgColor;
+    &.is-silent {
+        border: none;
+        &:hover {
+            background: $hoverBgColor;
+        }
     }
-  }
 }
 
 .img {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .is-ellipse {
-  border-radius: 30px;
+    border-radius: 30px;
 }
 
 .is-separator {
-  display: block;
-  width: 100%;
-  height: 1px;
-  background: $appFrameBorderColor;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: $appFrameBorderColor;
 }
 
 .font-subtitle {
-  font-size: $fontSizeSmall;
-  font-weight: 400;
-  color: $fontSubTitleColor;
+    font-size: $fontSizeSmall;
+    font-weight: 400;
+    color: $fontSubTitleColor;
 }
 
 .font-calEvent {
-  font-size: $fontSizeSmall;
-  font-weight: 300;
-  color: #fff;
+    font-size: $fontSizeSmall;
+    font-weight: 300;
+    color: #fff;
 }
 
 .font-layout-option {
-  font-size: $fontSizeBasic;
-  font-weight: 400;
+    font-size: $fontSizeBasic;
+    font-weight: 400;
 }
 
 .inline-block {
-  display: inline-block;
+    display: inline-block;
 }
 
 .is-grey {
-  color: $fontSubTitleColor;
+    color: $fontSubTitleColor;
 }
 
 .is-blue {
-  color: $singleDayGridTodayBgColor;
+    color: $singleDayGridTodayBgColor;
 }
 
 .is-lighter-gey {
-  color: #80868b;
+    color: #80868b;
 }
 
 .no-select {
-  user-select: none;
+    user-select: none;
 }
 
 .icon-circle-wrapper {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  color: $fontColor;
-  cursor: pointer;
-  transition: background 0.2s ease-in;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: $fontColor;
+    cursor: pointer;
+    transition: background 0.2s ease-in;
 
-  &:hover {
-    background: $hoverBgColor;
-  }
+    &:hover {
+        background: $hoverBgColor;
+    }
 }
 
 @keyframes placeHolderShimmer {
-  0% {
-    background-position: -468px 0;
-  }
-  100% {
-    background-position: 468px 0;
-  }
+    0% {
+        background-position: -468px 0;
+    }
+    100% {
+        background-position: 468px 0;
+    }
 }
 
 .cal-animated-background {
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-name: placeHolderShimmer;
-  animation-timing-function: linear;
-  background: #f6f7f8;
-  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
-  background-size: 800px 104px;
-  position: relative;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+    position: relative;
 }
-
-
