work on ctxMenu

--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtContextMenu/calEvtCxtMenu.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtContextMenu/calEvtCxtMenu.scss
@@ -1,4 +1,7 @@
-@import '../../../../assets/style/theme.scss';
+@import "../../../../assets/style/theme.scss";
+
+
+$delete-height: 40px;
 
 .calevt-ctxmenu {
   // position: fixed;
@@ -12,11 +15,37 @@
 
   .ctx-content {
     position: fixed;
-    width: 200px;
-    height: 50px;
+    width: $calCtxMenuWidth;
     background: white;
     border-radius: 2px;
     box-shadow: $calEvtCtxMenuShadow;
     z-index: 700;
+
+    &.is-activity {
+      position: relative;
+
+      .delete-container {
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+        line-height: $delete-height;
+        border-bottom: 1px solid $appFrameBorderColor;
+        cursor: pointer;
+        transition: all 0.2s ease;
+
+        &:hover {
+          background: $hoverBgColor;
+        }
+
+        .item-icon {
+          margin-right: 25px;
+        }
+      }
+
+      .color-picker {
+        position: relative;
+        padding: 10px 16px 3px 16px;
+      }
+    }
   }
 }
