--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -56,6 +56,7 @@ $calEventDefinerOptionHeight: 35px;
 $calEventDefinerOptionMainLeftPadding: 10px;
 
 $caldaySimpleevtItemHeight: 22px;
+$calCtxMenuWidth: 190px;
 
 .btn {
     border-radius: $btnBorderRadius;
