--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
@@ -10,6 +10,7 @@ $timingStyleLineheight: 20px;
     height: $caldaySimpleevtItemHeight;
     width: 100%;
     padding-bottom: 2px;
+    overflow-y: hidden;
 
     & .is-timingEvt {
       color: $fontColor;
