--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
@@ -2,8 +2,13 @@
 
 $panelPadding: 8px 10px;
 $containerWidth: 400px;
-$containerMinHeight: 90px;
+// $containerMinHeight: 90px;
 $containerMaxHeight: 300px;
+
+$action-height: 40px;
+$icon-label-dimension: 17px;
+$color-dot-dimension: 12px;
+$field-label-width: 60px;
 
 .caldayEvtView-pop {
   position: fixed;
@@ -17,7 +22,66 @@ $containerMaxHeight: 300px;
 .caldayEvtView-content {
   position: relative;
   width: $containerWidth;
-  min-height: $containerMinHeight;
+  // min-height: $containerMinHeight;
   max-height: $containerMaxHeight;
   overflow-y: auto;
+
+  .action-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    height: $action-height;
+    padding-right: 20px;
+  }
+
+  .action-icons {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .icon-label {
+    position: relative;
+
+    .ali-icon {
+      width: $icon-label-dimension;
+      height: $icon-label-dimension;
+      color: #5f6368;
+    }
+  }
+
+  .fields-container {
+    position: relative;
+    width: 100%;
+
+    .field {
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+
+    .field-label {
+      flex: 0 0 $field-label-width;
+      display: flex;
+      justify-content: center;
+    }
+
+    .field-body {
+      flex: 1;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  .color-dot {
+    display: block;
+    width: $color-dot-dimension;
+    height: $color-dot-dimension;
+    border-radius: 4px;
+  }
+
 }
