--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
@@ -1,14 +1,16 @@
 @import "../../../../assets/style/theme.scss";
+@import "../../../../assets/style/mixin.scss";
 
 $panelPadding: 8px 10px;
 $containerWidth: 400px;
 // $containerMinHeight: 90px;
-$containerMaxHeight: 300px;
+$containerMaxHeight: 700px;
 
 $action-height: 40px;
 $icon-label-dimension: 17px;
 $color-dot-dimension: 12px;
 $field-label-width: 60px;
+$filed-margin: 10px;
 
 .caldayEvtView-pop {
   position: fixed;
@@ -56,17 +58,28 @@ $field-label-width: 60px;
   .fields-container {
     position: relative;
     width: 100%;
+    padding: 0 12px 12px 0;
+    max-height: $containerMaxHeight;
+    overflow-y: auto;
+    @include customizeScrollbar();
 
     .field {
       position: relative;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
+      margin-bottom: $filed-margin;
+
+      &.is-double-margin {
+        margin-bottom: $filed-margin * 2;
+      }
     }
 
     .field-label {
       flex: 0 0 $field-label-width;
       display: flex;
       justify-content: center;
+      align-items: center;
+      height: 25px;
     }
 
     .field-body {
@@ -74,6 +87,9 @@ $field-label-width: 60px;
       text-align: left;
       display: flex;
       flex-direction: column;
+      color: #3c4043;
+      font-size: 13px;
+      white-space: normal;
     }
   }
 
@@ -82,6 +98,14 @@ $field-label-width: 60px;
     width: $color-dot-dimension;
     height: $color-dot-dimension;
     border-radius: 4px;
+  }
+
+  .info-title {
+    font-size: 22px;
+  }
+
+  .info-time {
+    // font-size: 14px;
   }
 
 }
