worked on evt presenter display, sorted reminder view pop, & evt display filter, eyc

--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDayEvtViewPop/calDayEvtViewPop.scss
@@ -87,7 +87,7 @@ $footer-height: 45px;
                 flex-direction: row;
             }
 
-            .done-actions {
+            .on-hover-actions {
                 display: flex;
                 align-items: center;
                 flex: 1;
@@ -96,7 +96,7 @@ $footer-height: 45px;
                 transition: opacity 0.2s ease;
             }
 
-            &:hover .done-actions {
+            &:hover .on-hover-actions {
                 opacity: 1;
             }
         }
