--- a/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
+++ b/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
@@ -16,4 +16,13 @@
     position: relative;
     width: 100%;
   }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: transparent;
+  }
 }
