--- a/src/modules/calendar/components/common/calEventPop/calEventPop.scss
+++ b/src/modules/calendar/components/common/calEventPop/calEventPop.scss
@@ -1,28 +1,27 @@
-@import '../../../assets/style/theme.scss';
+@import "../../../assets/style/theme.scss";
 
 .calevent-pop-container {
-    pointer-events: none;
-    padding: 4px 7px;
-    border-radius: 4px;
-    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
-        0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
-    user-select: none;
+  pointer-events: none;
+  padding: 4px 7px;
+  border-radius: 4px;
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+  user-select: none;
 
-    &.is-dragging {
-        width: 97%;
-    }
+  &.is-dragging {
+    width: 97%;
+  }
 
-    &.is-holdon {
-        width: 90%;
-    }
+  &.is-holdon {
+    width: 90%;
+  }
 
-    &__main {
-      display: flex;
-      flex-wrap: wrap;
-      text-align: left;
-    }
+  &__main {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+  }
 
-    &__title {
-      margin: 0 12px;
-    }
+  &__title {
+    margin: 0 12px;
+  }
 }
