--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/timeRangeDisplayer/timeRangeDisplayer.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/timeRangeDisplayer/timeRangeDisplayer.scss
@@ -112,8 +112,17 @@ $timing-item-padding: 0 14px;
       background: $activeBgColor;
     }
 
+    &.is-selected {
+      background: $hoverBgColor;
+    }
+
     .item-title {
       line-height: 38px;
+      font-size: 13px;
+    }
+
+    .item-offset {
+      margin-left: 10px;
     }
   }
 }
