--- a/src/modules/3dlsPromoSite/assets/style/theme.scss
+++ b/src/modules/3dlsPromoSite/assets/style/theme.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: '3dslight';
+    src: url('/static/font/3dsLight.ttf') format('truetype'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
 .btn {
     background-color: #ffffff;
     display: inline-block;
