--- a/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
+++ b/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
@@ -1,9 +1,14 @@
-$discover-container-margin-top: 100px;
+@import '../../assets/style/theme.scss';
+
+$discover-container-margin-top: 200px;
 $discover-main-padding-top: 80px;
 
-$discover-step-height: 650px;
-$discover-step-offset: 300px;
+$discover-step-height: 910px;
+$discover-step-bg-width: 800px;
+// $discover-step-offset: 300px;
 $discover-step-img-width: 80px;
+
+
 
 .discover-container {
     position: relative;
@@ -12,12 +17,10 @@ $discover-step-img-width: 80px;
 }
 
 .discover-btn {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
+    position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
 
     & img {
       width: 20px;
@@ -40,32 +43,33 @@ $discover-step-img-width: 80px;
     flex-direction: column;
     align-items: center;
 
-    &--title {
-        color: #005386;
-        letter-spacing: 0.42px;
-        font-size: 28px;
-        line-height: 42px;
-    }
+    // &--title {
+    //     color: #005386;
+    //     letter-spacing: 0.42px;
+    //     font-size: 28px;
+    //     line-height: 42px;
+    // }
 
-    &--des {
-        color: #555555;
-        letter-spacing: 0.28px;
-        font-size: 14px;
-        line-height: 24px;
-        text-align: center;
-        & a {
-            text-decoration: underline;
-            color: #35b4ff;
-            font-weight: 600;
-        }
-    }
+    // &--des {
+    //     color: #555555;
+    //     letter-spacing: 0.28px;
+    //     font-size: 14px;
+    //     line-height: 24px;
+    //     text-align: center;
+    //     & a {
+    //         text-decoration: underline;
+    //         color: #35b4ff;
+    //         font-weight: 600;
+    //     }
+    // }
 }
 
 .discover-step {
     position: relative;
-    width: 100%;
+    // width: 100%;
+    width: $discover-step-bg-width;
     height: $discover-step-height;
-    padding: 0 $discover-step-offset;
+    // padding: 0 $discover-step-offset;
     margin-top: 50px;
 
     &::after {
@@ -73,7 +77,7 @@ $discover-step-img-width: 80px;
         position: absolute;
         top: 0;
         bottom: 0;
-        left: $discover-step-offset + $discover-step-img-width / 2;
+        left: $discover-step-img-width / 2;
         border-left: 3px dashed #eeeeee;
         z-index: 1;
     }
@@ -114,7 +118,7 @@ $discover-step-img-width: 80px;
     &--des {
         color: #555555;
         letter-spacing: 0.21px;
-        font-size: 12px;
+        font-size: 14px;
         line-height: 24px;
         text-align: left;
     }
@@ -122,9 +126,18 @@ $discover-step-img-width: 80px;
 
 @media only screen and (max-width: 850px) {
   .discover-step {
-    padding: 0;
+    padding: 0 12px;
+    width: 100%;
     &::after {
       display: none;
     }
+  }
+
+  .discover-btn--text {
+      color: #ffffff;
+  }
+
+  .discover-container {
+      margin-top: 250px;
   }
 }
