--- a/src/modules/3dlsPromoSite/main.scss
+++ b/src/modules/3dlsPromoSite/main.scss
@@ -52,6 +52,7 @@ $carousel-text-left: 200px;
     position: relative;
     padding-left: $carousel-text-left;
     padding-top: 70px;
+    padding-right: 130px;
     flex-shrink: 0;
     flex-grow: 0;
     width: 50%;
@@ -60,20 +61,21 @@ $carousel-text-left: 200px;
     letter-spacing: 0.5px;
 
     &--main {
-      font-size: 28px;
-      line-height: 35px;
+      font-size: 38px;
+      line-height: 70px;
     }
 
     &--sub {
       margin-top: 20px;
-      font-size: 14px;
+      font-size: 17px;
       line-height: 30px;
     }
 
     &--btn {
       font-size: 20px;
-      padding: 8px 28px;
-      border-radius: 185px;
+      font-weight: 600;
+      padding: 14px 42px;
+      // border-radius: 185px;
       margin-top: 35px;
     }
   }
@@ -85,4 +87,26 @@ $carousel-text-left: 200px;
   top: 40px;
   left: $carousel-text-left;
   width: 165px;
+}
+
+@media only screen and (max-width: 850px)  {
+  .carousel-main-img {
+    display: none;
+  }
+
+  .carousel-main-text {
+    width: 100%;
+    text-align: center;
+    padding: 20px 0 0 0;
+  }
+
+  .carousel-header {
+    left: 50%;
+  }
+
+  .dls-logo {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
 }
