--- a/src/modules/3dlsPromoSite/components/footer/footer.scss
+++ b/src/modules/3dlsPromoSite/components/footer/footer.scss
@@ -40,7 +40,14 @@ $footer-padding-hor: 80px;
     .footer-container .power-by {
         justify-content: center;
     }
+
     .footer-container .footer-options {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .footer-container {
+        padding: 0 0 0 20px;
     }
 }
