--- a/src/modules/3dlsPromoSite/components/select/select.scss
+++ b/src/modules/3dlsPromoSite/components/select/select.scss
@@ -7,3 +7,7 @@
 .zent-select[data-zv="8.0.0"].cls-select-style .zent-select-text {
   line-height: 30px;
 }
+
+.zent-select[data-zv="8.0.0"].cls-select-style.is-error .zent-select-text {
+  border-color: #e63f41;
+}
