--- a/src/modules/3dlsPromoSite/components/contactUs/contactUs.scss
+++ b/src/modules/3dlsPromoSite/components/contactUs/contactUs.scss
@@ -9,6 +9,7 @@ $contact-item-margin-bottom: 20px;
 .contact-us {
   position: relative;
   width: 100%;
+  margin-top: 150px;
   text-align: center;
 
   &-title {
@@ -78,7 +79,7 @@ $contact-item-margin-bottom: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
 
   &--main {
@@ -99,7 +100,7 @@ $contact-item-margin-bottom: 20px;
 
   & .title--sub {
     text-align: left;
-    font-size: 15px;
+    font-size: 18px;
   }
 }
 
@@ -115,9 +116,10 @@ $contact-item-margin-bottom: 20px;
     background: #35b4ff;
     color: #ffffff;
     letter-spacing: 0.41px;
-    font-size: 21px;
+    font-size: 26px;
     font-weight: 600;
     max-width: 100%;
+    cursor: pointer;
   }
 }
 
