--- a/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
+++ b/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
@@ -1,130 +1,138 @@
-@import '../../assets/style/theme.scss';
+@import "../../assets/style/theme.scss";
 
-$discover-container-margin-top: 200px;
+$discover-container-margin-top: 0; // 200px;
 $discover-main-padding-top: 80px;
 
-$discover-step-height: 910px;
-$discover-step-bg-width: 800px;
+$discover-step-height: 1000px;
+$discover-step-bg-width: 1200px;
 // $discover-step-offset: 300px;
-$discover-step-img-width: 80px;
-
-
+$discover-step-img-width: 90px;
 
 .discover-container {
-    position: relative;
-    width: 100%;
-    margin-top: $discover-container-margin-top;
-}
-
-.discover-btn {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    & img {
-      width: 20px;
-    }
-
-    &--text {
-        color: #005386;
-        font-size: 16px;
-        margin-left: 10px;
-        letter-spacing: .24px;
-        cursor: pointer;
-    }
+  position: relative;
+  width: 100%;
+  margin-top: $discover-container-margin-top;
 }
 
 .discover-main {
-    position: relative;
-    width: 100%;
-    padding-top: $discover-main-padding-top;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  position: relative;
+  width: 100%;
+  padding-top: $discover-main-padding-top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    // &--title {
-    //     color: #005386;
-    //     letter-spacing: 0.42px;
-    //     font-size: 28px;
-    //     line-height: 42px;
-    // }
+  &--body {
+    padding: 0 350px;
+  }
 
-    // &--des {
-    //     color: #555555;
-    //     letter-spacing: 0.28px;
-    //     font-size: 14px;
-    //     line-height: 24px;
-    //     text-align: center;
-    //     & a {
-    //         text-decoration: underline;
-    //         color: #35b4ff;
-    //         font-weight: 600;
-    //     }
-    // }
+  // &--title {
+  //     color: #005386;
+  //     letter-spacing: 0.42px;
+  //     font-size: 28px;
+  //     line-height: 42px;
+  // }
+
+  // &--des {
+  //     color: #555555;
+  //     letter-spacing: 0.28px;
+  //     font-size: 14px;
+  //     line-height: 24px;
+  //     text-align: center;
+  //     & a {
+  //         text-decoration: underline;
+  //         color: #35b4ff;
+  //         font-weight: 600;
+  //     }
+  // }
 }
 
 .discover-step {
-    position: relative;
-    // width: 100%;
-    width: $discover-step-bg-width;
-    height: $discover-step-height;
-    // padding: 0 $discover-step-offset;
-    margin-top: 50px;
+  position: relative;
+  // width: 100%;
+  width: $discover-step-bg-width;
+  height: $discover-step-height;
+  max-width: 100vw;
+  // padding: 0 $discover-step-offset;
+  margin-top: 50px;
 
-    &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: $discover-step-img-width / 2;
-        border-left: 3px dashed #eeeeee;
-        z-index: 1;
-    }
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: $discover-step-img-width / 2;
+    border-left: 3px dashed #eeeeee;
+    z-index: 1;
+  }
 }
 
 .discover-step-body {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
 
 .discover-step-main {
-    position: relative;
-    display: flex;
-    align-items: flex-start;
-    z-index: 2;
-    & img {
-        width: $discover-step-img-width;
-    }
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  z-index: 2;
+  & img {
+    width: $discover-step-img-width;
+    flex-shrink: 0;
+  }
 }
 
 .discover-step-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin-left: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
 
-    &--title {
-        color: #555555;
-        letter-spacing: 0.3px;
-        font-size: 20px;
-        line-height: 42px;
-        font-weight: 600;
-    }
+  &--title {
+    color: #555555;
+    letter-spacing: 0.3px;
+    font-size: 30px;
+    line-height: 42px;
+    font-weight: 600;
+  }
 
-    &--des {
-        color: #555555;
-        letter-spacing: 0.21px;
-        font-size: 14px;
-        line-height: 24px;
-        text-align: left;
-    }
+  &--des {
+    color: #555555;
+    letter-spacing: 0.21px;
+    font-size: 21px;
+    line-height: 38px;
+    text-align: left;
+  }
+}
+@media only screen and (max-width: 1400px) {
+  .discover-container {
+    margin-top: 200px;
+  }
+
+  .discover-step-content--title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .discover-step-content--des {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .discover-main--body {
+    padding: 0 150px;
+  }
 }
 
 @media only screen and (max-width: 850px) {
+  .discover-step-main img {
+    width: 80px;
+  }
+
   .discover-step {
     padding: 0 12px;
     width: 100%;
@@ -133,11 +141,11 @@ $discover-step-img-width: 80px;
     }
   }
 
-  .discover-btn--text {
-      color: #ffffff;
+  .discover-container {
+    margin-top: 250px;
   }
 
-  .discover-container {
-      margin-top: 250px;
+  .discover-main--body {
+    padding: 0 30px;
   }
 }
