--- a/src/modules/3dlsPromoSite/components/footer/footer.scss
+++ b/src/modules/3dlsPromoSite/components/footer/footer.scss
@@ -13,11 +13,15 @@ $footer-padding-hor: 80px;
     & > * {
         flex-grow: 1;
     }
+
+    & a {
+        color: #005386;
+    }
     
     & .power-by {
         position: relative;
         height: $footer-item-height;
-        font-size: 16px;
+        font-size: 21px;
         display: flex;
         align-items: center;
     }
@@ -25,7 +29,7 @@ $footer-padding-hor: 80px;
     & .footer-options {
         position: relative;
         height: $footer-item-height;
-        font-size: 14px;
+        font-size: 18px;
         display: flex;
         justify-content: flex-end;
         align-items: center;  
