--- a/src/modules/3dlsPromoSite/main.scss
+++ b/src/modules/3dlsPromoSite/main.scss
@@ -1,15 +1,14 @@
-@import './assets/style/theme.scss';
+@import "./assets/style/theme.scss";
 
-$header-bottom-to-top: 136px;
-$carousel-text-left: 200px;
+$header-bottom-to-top: 186px;
+$carousel-text-left: 120px;
 
 .dls-promo-container {
   position: relative;
   width: 100%;
   height: auto;
   margin: 0 auto;
-  // height: 100%;
-  background-image: url('/static/svg/backdrop.svg');
+  background-image: url("/static/svg/backdrop.svg");
   background-size: 100% 100%;
   -o-background-size: 100% 100%;
   -webkit-background-size: 100% 100%;
@@ -17,21 +16,41 @@ $carousel-text-left: 200px;
 }
 
 .carousel-container {
+  position: relative;
   width: 100%;
-  height: 569px;
+  height: 100vh;
   overflow-x: hidden;
   overflow-y: hidden;
-  // background: transparent radial-gradient(closest-side at 73% 68%, #239de8 0%, #005386 100%) 0% 0% no-repeat padding-box;
-  // mix-blend-mode: multiply;
-  // opacity: 1;
+}
+
+.discover-btn {
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & img {
+    width: 29px;
+  }
+
+  &--text {
+    color: #005386;
+    font-size: 24px;
+    margin-left: 10px;
+    letter-spacing: 0.24px;
+    cursor: pointer;
+  }
 }
 
 .carousel-main-img {
   position: absolute;
   height: auto;
-  top: 80px;
-  right: -100px;
-  width: 1000px;
+  top: 180px;
+  right: -20px;
+  width: 1195px;
 }
 
 .carousel-header {
@@ -40,10 +59,11 @@ $carousel-text-left: 200px;
 }
 
 .carousel-main {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: $header-bottom-to-top;
+  position: relative;
+  // left: 0;
+  // right: 0;
+  // top: $header-bottom-to-top;
+  padding-top: $header-bottom-to-top;
   display: flex;
   flex-wrap: wrap;
   overflow-x: hidden;
@@ -51,8 +71,8 @@ $carousel-text-left: 200px;
   &-text {
     position: relative;
     padding-left: $carousel-text-left;
-    padding-top: 70px;
-    padding-right: 130px;
+    padding-top: 110px;
+    padding-right: 200px;
     flex-shrink: 0;
     flex-grow: 0;
     width: 50%;
@@ -61,23 +81,22 @@ $carousel-text-left: 200px;
     letter-spacing: 0.5px;
 
     &--main {
-      font-size: 38px;
+      font-size: 50px;
       line-height: 70px;
     }
 
     &--sub {
-      margin-top: 20px;
-      font-size: 17px;
-      line-height: 30px;
+      margin-top: 40px;
+      font-size: 21px;
+      line-height: 36px;
       text-align: justify;
     }
 
     &--btn {
-      font-size: 20px;
+      font-size: 26px;
       font-weight: 600;
-      padding: 14px 42px;
-      // border-radius: 185px;
-      margin-top: 35px;
+      padding: 18px 52px;
+      margin-top: 45px;
     }
   }
 }
@@ -87,10 +106,40 @@ $carousel-text-left: 200px;
   position: absolute;
   top: 40px;
   left: $carousel-text-left;
-  width: 165px;
+  width: 232px;
 }
 
-@media only screen and (max-width: 850px)  {
+@media only screen and (max-width: 1550px) {
+  // .discover-btn {
+  //   bottom: 15px;
+  // }
+
+  .carousel-main-img {
+    width: 65%;
+  }
+
+  .carousel-main-text {
+    padding-left: 20px;
+    padding-top: 0px;
+    padding-right: 95px;
+  }
+
+  .carousel-main-text--main {
+    font-size: 28px;
+    line-height: 42px;
+  }
+
+  .carousel-main-text--sub {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  .carousel-main-text--btn {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
   .carousel-main-img {
     display: none;
   }
@@ -98,7 +147,7 @@ $carousel-text-left: 200px;
   .carousel-main-text {
     width: 100%;
     text-align: center;
-    padding: 20px 5px 0 5px;
+    padding: 0px 15px 0 15px;
   }
 
   .carousel-header {
@@ -109,5 +158,14 @@ $carousel-text-left: 200px;
     left: 50%;
     transform: translateX(-50%);
   }
-  
+
+  .discover-btn--text {
+    color: #ffffff;
+  }
+}
+
+@media only screen and (max-device-width: 1366px) {
+   .carousel-container {
+     height: 800px;
+   }
 }
