--- a/src/modules/3dlsPromoSite/main.scss
+++ b/src/modules/3dlsPromoSite/main.scss
@@ -109,6 +109,13 @@ $carousel-text-left: 120px;
   width: 232px;
 }
 
+
+@media only screen and (min-width: 1100px) {
+  .carousel-container {
+    min-height: 900px;
+  }
+}
+
 @media only screen and (max-width: 1550px) {
   // .discover-btn {
   //   bottom: 15px;
@@ -136,6 +143,12 @@ $carousel-text-left: 120px;
 
   .carousel-main-text--btn {
     font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .carousel-main-img {
+    width: 55%;
   }
 }
 
