--- a/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
+++ b/src/modules/3dlsPromoSite/components/discoverContainer/discoverContainer.scss
@@ -23,6 +23,8 @@ $discover-step-img-width: 90px;
   align-items: center;
 
   &--body {
+    position: relative;
+    width: 100%;
     padding: 0 350px;
   }
 
@@ -90,6 +92,7 @@ $discover-step-img-width: 90px;
   position: relative;
   display: flex;
   flex-direction: column;
+  width: 100%;
   margin-left: 30px;
 
   &--title {
