--- a/src/modules/3dlsPromoSite/main.scss
+++ b/src/modules/3dlsPromoSite/main.scss
@@ -177,8 +177,8 @@ $carousel-text-left: 120px;
   }
 }
 
-@media only screen and (max-device-width: 1366px) {
-   .carousel-container {
-     height: 800px;
-   }
-}
+// @media only screen and (max-device-width: 1366px) {
+//    .carousel-container {
+//      height: 800px;
+//    }
+// }
